	  hex)
	- Deleting a printer with active print jobs would still
	  crash the server.
	- ippWrite() and ipp_write_file() didn't send the
	  correct value length for name-with-language and
	  text-with-language attributes.
	- Updated IPP code to support copied strings (that
	  should not be freed); this provides slightly more
	  efficient IPP server performance.
	- Updated PDF filter to Xpdf 0.91.


CHANGES IN CUPS v1.1.4

	- Makefile and configure script fixes.
	- **** Changed the default Printcap setting **** to
	  /etc/printcap. There are just too many people asking
	  why application XYZ doesn't see their printers!
	- The web admin interface now displays an error if it
	  can't get the list of printer drivers from cupsd.
	- The IPP backend was putting the copies option before
	  the other job options were set. This caused the IPP
	  request to contain attribute groups in the wrong
	  order, which prevented remote printing.
	- Added checks in scheduler to free memory used for
	  IPP requests and language information when closing
	  a client connection.
	- Fixed the duplex option in the HP LaserJet driver.  It
	  should now work with all LaserJet printers (and
	  compatibles)
	- The add-printer web interface didn't initialize the
	  "old info" data pointer, which caused random crashes
	  on many OS's.
	- Fixed many page sizes defined in the Level 1
	  compatibility file "gs_statd.ps" to match reality.
	- Fixed another bug in the setpagedevice "code" in
	  Ghostscript.  It should now accept all standard
	  Adobe attributes on all platforms.
	- Fixed pstoraster so that it reallocates memory for
	  color depth changes as well as size/resolution
	  changes.  This removes an ordering constraint on
	  the color, page size, and resolution options in
	  PPD files.
	- The IPP backend didn't use the job's character set
	  when the destination printer supported it.  This
	  caused problems when printing text files to other
	  CUPS servers.